--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,17 @@
         <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico'%}" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/styles.css'%}" rel="stylesheet" />
+        <style>
+            .sear{
+                display: flex;
+                margin: 2px;
+            }
+            #search_btn{
+                  padding: 0.25rem 0.5rem;
+                  font-size: 0.875rem;
+                  border-radius: 0.2rem;
+            }
+        </style>
     </head>
     <body>
         <div class="d-flex" id="wrapper">
@@ -37,6 +48,30 @@
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
+ <form action="/search" method="GET">
+                                        <div class="row">
+                                            <div style="float: right;" class="sear">
+                                                <div class="sear">
+                                                    <div class="sear" style="margin-top: 10px;">
+                                                        <select style="width: 6em;" class="custom-select custom-select-md" name="type">
+                                                            <option value="all">전체</option>
+                                                            <option value="title_content">제목+내용</option>
+                                                            <option value="title">제목</option>
+                                                            <option value="content">내용</option>
+                                                            <option value="writer">작성자</option>
+                                                        </select>
+                                                    </div>
+                                                    <div class="sear" style="margin-top: 10px;">
+                                                        <input type="text" name="q" value="{{ q }}" class="form-control form-control-md"
+                                                            style="width: 15em;" placeholder="검색어를 입력해주세요.">
+                                                    </div>
+                                                    <div class="sear">
+                                                         <button class="btn btn-md btn-outline-dark" type="submit">검색</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </form>
                                 <li class="nav-item active"><a class="nav-link" href="/">홈으로</a></li>
                                 <li class="nav-item"><a class="nav-link" href="/link">링크</a></li>
                                 {% if request.session.sessionid == None %}
