--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11327,3 +11327,14 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
 #page-content-wrapper > div > nav > ul > li {
     text-decoration : none;
 }
+
+.sear{
+        display: flex;
+        margin: 2px;
+    }
+
+#search_btn{
+      padding: 0.25rem 0.5rem;
+      font-size: 0.875rem;
+      border-radius: 0.2rem;
+}
