--- a/templates/wiki/post.html
+++ b/templates/wiki/post.html
@@ -23,6 +23,30 @@
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
+                                <form action="/search" method="GET">
+                                        <div class="row">
+                                            <div style="float: right;" class="sear">
+                                                <div class="sear">
+                                                    <div class="sear" style="margin-top: 10px;">
+                                                        <select style="width: 6em;" class="custom-select custom-select-md" name="type">
+                                                            <option value="all">전체</option>
+                                                            <option value="title_content">제목+내용</option>
+                                                            <option value="title">제목</option>
+                                                            <option value="content">내용</option>
+                                                            <option value="writer">작성자</option>
+                                                        </select>
+                                                    </div>
+                                                    <div class="sear" style="margin-top: 10px;">
+                                                        <input type="text" name="q" value="{{ q }}" class="form-control form-control-md"
+                                                            style="width: 15em;" placeholder="검색어를 입력해주세요.">
+                                                    </div>
+                                                    <div class="sear">
+                                                         <button class="btn btn-md btn-outline-dark" type="submit">검색</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </form>
                                 <li class="nav-item active"><a class="nav-link" href="/">홈으로</a></li>
                                 <li class="nav-item"><a class="nav-link" href="/link">링크</a></li>
                                 {% if request.session.sessionid == None %}
