모든 페이지에 검색기능 추가

--- a/templates/notice/notice.html
+++ b/templates/notice/notice.html
@@ -1,17 +1,19 @@
 {% extends 'base.html' %}
 {% block content %}
+
+</style>
 <div class="d-flex" id="wrapper">
     <!-- Sidebar-->
     <div class="border-end bg-white" id="sidebar-wrapper">
         <div class="sidebar-heading border-bottom bg-light" style="font-weight:bold" ><a href="/" style="color: red; text-decoration : none;">CODEING</a></div>
         <div class="list-group list-group-flush">
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/notice/notice"style="background:blue; font-weight:bold; color:white">공지사항</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/notice/notice" id="codeing_notice_nav">공지사항</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/info/info">정보 게시판</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/qna/qna">질문 게시판</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/free/free">자유게시판</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/study/study">스터디 모집</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/project/project">프로젝트 모집</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/wiki/wiki" id="codewiki">코드잉위키</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/wiki/wiki">코드잉위키</a>
         </div>
     </div>
     <!-- Page content wrapper-->
