--- a/templates/base.html
+++ b/templates/base.html
@@ -81,9 +81,10 @@
             </div>
         </nav>
 
-
 {% block content %}
 {% endblock %}
+    </div>
+</div>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
