모든 페이지 왼쪽 네비바 페이지마다 스타일 추가

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,14 +18,14 @@
     <div class="border-end bg-white" id="sidebar-wrapper">
         <div class="sidebar-heading border-bottom bg-light" style="font-weight:bold" ><a href="/" style="color: red; text-decoration : none;">CODEING</a></div>
         <div class="list-group list-group-flush">
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/notice/notice">공지사항</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/info/info">정보 게시판</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/qna/qna">질문 게시판</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/free/free">자유게시판</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/study/study">스터디 모집</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/project/project">프로젝트 모집</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/wiki/wiki" id="codewiki">코드잉위키</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/cart">스크랩</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/notice/notice" id="codeing_notice_nav">공지사항</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/info/info" id="codeing_info_nav">정보 게시판</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/qna/qna" id="codeing_qna_nav">질문 게시판</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/free/free" id="codeing_free_nav">자유게시판</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/study/study" id="codeing_study_nav">스터디 모집</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/project/project" id="codeing_project_nav">프로젝트 모집</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/wiki/wiki" id="codeing_wiki_nav">코드잉위키</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/cart" id="codeing_card_nav">스크랩</a>
         </div>
     </div>
     <!-- Page content wrapper-->
