--- a/templates/wiki/postfail.html
+++ b/templates/wiki/postfail.html
@@ -1,3 +1,10 @@
+<style>
+#codeing_wiki_nav{
+    background:blue;
+    font-weight:bold;
+    color:white;
+    }
+</style>
 <!DOCTYPE html>
 {% load static %}
                 <div class="container-fluid">
