--- a/templates/info/info.html
+++ b/templates/info/info.html
@@ -1,3 +1,11 @@
+
+<style>
+#codeing_info_nav{
+    background:blue;
+    font-weight:bold;
+    color:white;
+    }
+</style>
 {% extends 'base.html' %}
 {% block content %}
         <div class="container-fluid">
