--- a/templates/info/postok.html
+++ b/templates/info/postok.html
@@ -1,3 +1,10 @@
+<style>
+#codeing_info_nav{
+    background:blue;
+    font-weight:bold;
+    color:white;
+    }
+</style>
 {% extends 'base.html' %}
 {% block content %}
         <div class="container-fluid">
