--- a/templates/wiki/post.html
+++ b/templates/wiki/post.html
@@ -1,3 +1,10 @@
+<style>
+#codeing_wiki_nav{
+    background:blue;
+    font-weight:bold;
+    color:white;
+    }
+</style>
 {% extends 'base.html' %}
 {% block content %}
                 <div class="container">
