스크랩 기능 / 상세 페이지 기능 구현
# clip에 clip.html, detail.html, postok.html 추가
# 각 게시판 html에 스크랩 기능 추가
# base.html 스크랩 부분 수정

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,8 @@
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/study/study" id="codeing_study_nav">스터디 모집</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/project/project" id="codeing_project_nav">프로젝트 모집</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/wiki/wiki" id="codeing_wiki_nav">코드잉위키</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/cart" id="codeing_card_nav">스크랩</a>
+            <!-- 2220312 코드 추가 스크랩페이지이동 -->
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/scrap/scrap" id="codeing_card_nav">스크랩</a>
         </div>
     </div>
     <!-- Page content wrapper-->
