--- a/templates/project/project.html
+++ b/templates/project/project.html
@@ -12,7 +12,8 @@
                 <div class="container">
                 <table class="table">
                 <thead class="thead-light">
-                <tr class="thead"> <th>번호</th><th>제목</th><th>글쓴이</th><th>날짜</th></tr>
+                <!-- 2220312 코드 추가 스크랩추가 -->
+                        <tr class="thead"> <th>번호</th><th>제목</th><th>글쓴이</th><th>모집기한</th><th>날짜</th><th>스크랩</th></tr>
                 </thead>
                 <tbody>
                 {% for o in objs %}
@@ -22,7 +23,8 @@
                         <span>{{ o.board_id }}</span>
                     </td>
                     <td>
-                        <a href="/project/project">
+                        <!-- 2220312 코드 추가 스크랩추가 -->
+                        <a href="/clip/detail?board_id={{ o.board_id }}">
                             <span>{{ o.board_title }}</span>
                         </a>
                     </td>
@@ -31,6 +33,10 @@
                     </td>
                     <td>
                         <span>{{ o.board_date | date:'Y-m-d H:i'}}</span>
+                    </td>
+                    <!-- 2220312 코드 추가 스크랩추가 -->
+                    <td>
+                        <button type="button" class="btn btn-info" onclick="location.href='/notice/scrap?board_id={{ o.board_id }}&type=free'" >스크랩</button>
                     </td>
                 </tr>
                 {% endif %}
