--- a/templates/qna/qna.html
+++ b/templates/qna/qna.html
@@ -12,7 +12,8 @@
                 <div class="container">
                     <table class="table">
                         <thead class="thead-light">
-                        <tr class="thead"> <th>번호</th><th>제목</th><th>글쓴이</th><th>날짜</th></tr>
+                        <!-- 2220312 코드 추가 스크랩추가 -->
+                        <tr class="thead"> <th>번호</th><th>제목</th><th>글쓴이</th><th>날짜</th><th>스크랩</th></tr>
                         </thead>
                         <tbody>
                         {% for o in objs %}
@@ -22,13 +23,18 @@
                                 <span>{{ o.board_id }}</span>
                             </td>
                             <td>
-                                <a href="/qna/qna" >{{o.board_title}}</a>
+                                <!-- 2220312 코드 추가 스크랩추가 -->
+                                <a href="/clip/detail?board_id={{ o.board_id }}" >{{o.board_title}}</a>
                             </td>
                             <td>
                                 {{o.user_id}}
                             </td>
                             <td>
                                 {{o.board_date | date:'Y-m-d H:i'}}
+                            </td>
+                            <!-- 2220312 코드 추가 스크랩추가 -->
+                            <td>
+                                <button type="button" class="btn btn-info" onclick="location.href='/notice/scrap?board_id={{ o.board_id }}&type=free'" >스크랩</button>
                             </td>
                         </tr>
                         {% endif %}
