--- a/templates/clip/postok.html
+++ b/templates/clip/postok.html
@@ -1,6 +1,6 @@
 <!-- 2220312 코드 추가 스크랩 등록여부 페이지 -->
 <style>
-#codeing_notice_nav{
+#codeing_card_nav{
     background:blue;
     font-weight:bold;
     color:white;
