--- a/templates/study/study.html
+++ b/templates/study/study.html
@@ -24,7 +24,7 @@
                             </td>
                             <td>
                                 <!-- 2220312 코드 추가 스크랩추가 -->
-                                <a href="/clip/detail?board_id={{ o.board_id }}" >{{o.board_title}}</a>
+                                <a href="/clip/detailstupro?board_id={{ o.board_id }}" >{{o.board_title}}</a>
                             </td>
                             <td>
                                 {{o.user_id}}
