--- a/templates/project/project.html
+++ b/templates/project/project.html
@@ -24,7 +24,7 @@
                     </td>
                     <td>
                         <!-- 2220312 코드 추가 스크랩추가 -->
-                        <a href="/clip/detail?board_id={{ o.board_id }}">
+                        <a href="/clip/detailstupro?board_id={{ o.board_id }}">
                             <span>{{ o.board_title }}</span>
                         </a>
                     </td>
